--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Study Guide</title>
+    <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="header">
@@ -12,7 +12,35 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+      <li>The head element contains information about the webpage</li>
+    <li>The body element represents the visible content shown to the user</li>
+    <li>Header and main are not visible on the webpage to the user</li>
+    <li>the p element represents a paragraph or block of text</li>
+  </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: Checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>command cd "file-name": can change your current file location</li>
+          <li>command code . will pull up visual studio</li>
+        </ul>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JacaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
